# act

./: Cargo.toml  README.md  input.csv  input2.csv  input3.csv  test-cases.csv
src/: lib.rs  parse.rs  process.rs
src/stores/: act_mem.rs  mem.rs  mod.rs
src/types/: account.rs  mod.rs  transaction.rs
