[package]
name = "act"
version = "0.1.0"
authors = ["Lewis Diamond <git@lewisdiamond.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
csv = "1.1.5"
strum_macros = "0.20.1"
clap = "2.33.3"

[dev-dependencies]
tokio-test = "0.4.0"
