[package]
name = "act"
version = "0.1.0"
authors = ["Lewis Diamond <git@lewisdiamond.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
csv = "1.3"
clap = { version = "4", features = ["cargo"] }
async-stream = "0.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4.0"
